# gsuite-admin-sendmail

./: README.md  gsuite-admin-sendmail.cabal  stack.yaml
app/: Main.hs
src/Google/: SendMail.hs
